fixed routing and swagger files so that the routes were pointing in the right spot.
