# src/swagger-output.json
@@ -5,7 +5,7 @@
     "description": "Description",
     "version": "1.0.0"
   },
-  "host": "localhost:8080",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
     "http", "https"
@@ -58,7 +58,7 @@
         }
       }
     },
-    "/contacts": {
+    "/makeup": {
       "get": {
         "description": "",
         "produces": [
